# sp_segment

./: .editorconfig  .gitignore  .nf-core.yml  .prettierignore  CHANGELOG.md  README.md  nextflow.config  nextflow_schema.json  pyproject.toml  ro-crate-metadata.json
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  python-tests.yml
assets/: samplesheet.csv  schema_input.json
conf/: base.config  modules.config  test.config  test_cellsam.config  test_cellsam_no_backsub.config  test_mesmer.config  test_mesmer_kronos.config  test_mesmer_no_backsub.config  test_multisample.config  test_no_backsub.config
docs/: output.md  usage.md
modules/local/cellmeasurement/: environment.yml  main.nf  meta.yml
modules/local/cellsamsegment/: environment.yml  main.nf  meta.yml
modules/local/combinechannels/: environment.yml  main.nf
modules/local/kronosembeddings/: environment.yml  main.nf  meta.yml
modules/local/mesmersegment/: environment.yml  main.nf
modules/local/segmentationreport/: environment.yml  main.nf
modules/local/smoothmasks/: environment.yml  main.nf
subworkflows/local/backgroundsubtract/: main.nf
subworkflows/local/cellsam_segment/: main.nf  meta.yml
subworkflows/local/cellsam_segment_wbacksub/: main.nf  meta.yml
subworkflows/local/mesmer_segment/: main.nf
tests/: cellpose_mesmer_multi_samplesheet.csv  cellpose_no_backsub_samplesheet.csv  cellsam_no_backsub_samplesheet.csv  cellsam_samplesheet.csv  kronos_marker_metadata.csv  mesmer_no_backsub_samplesheet.csv
tests/python/: conftest.py  test_erosion_bins.py
workflows/: sp_segment.nf
(+38 files in other folders)
