[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sp-segment"
version = "0.1.0"
description = "WEHI-SODA-Hub spatial proteomics segmentation pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[tool.uv.pip]
python-version = "3.10"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "numpy",
    "scipy",
    "scikit-image",
    "shapely",
    "tifffile",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
